# trie

./: .gitignore  LICENSE  README.md  pyproject.toml
src/trie/: __init__.py  core.py  errors.py  node.py
tests/: __init__.py  test_autocomplete.py  test_delete.py  test_edge_cases.py  test_errors.py  test_insert_search.py
